# shenglei

./: .gitignore  CMakeLists.txt  GraphicsView.cpp  GraphicsView.h  HighestWidgetTab.cpp  HighestWidgetTab.h  MacoustoWidgetTab.cpp  MacoustoWidgetTab.h  Resource.rc  WorkSpaceWidget.cpp  WorkSpaceWidget.h  app.manifest  config.cpp  config.h  customcheckbox.cpp  customcheckbox.h  defer.h  define.h  dlg_act.cpp  dlg_act.h  dlg_act.ui  iport  iport.cpp  iport.h  jlcompressex.cpp  jlcompressex.h  loadingdialog.cpp  loadingdialog.h  loadingdialog.ui  log.cpp  log.h  mFristPage.cpp  mFristPage.h  mFristPage.ui  macousto_pod.cpp  macousto_pod.h  macousto_pod.ui  macousto_pso.cpp  macousto_pso.h  macousto_pso.ui  (+111 more)
doc/: 1.txt  2.txt  AA通讯命令.txt  new1.txt  new2.txt
q/: b.qss
thrid/QsLog/: CMakeLists.txt  QsLog.cpp  QsLog.h  QsLogDest.cpp  QsLogDest.h  QsLogDestConsole.cpp  QsLogDestConsole.h  QsLogDestFile.cpp  QsLogDestFile.h  QsLogDestFunctor.cpp  QsLogDestFunctor.h  QsLogLevel.h
thrid/test/zlib/: jlcompressex.cpp  jlcompressex.h  mainwindow.cpp  zlib.pro
thrid/zlib/lib/: quazip.lib
